--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ div.greeting {
   position:absolute;
   top:50%;
   left:50%;
-  margin-top:-69px;
+  margin-top:-46px;
   margin-left:-80px;
   text-align: left;
   font-size: 20px;
@@ -33,4 +33,6 @@ a:hover {
   background:#f9fc7e;
 }
 
-
+a.linked {
+  font-size: 12px;
+}
