--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   margin:0 auto;
-  font-family: helvetica-light;
+  font-family:helvetica-light;
   font-size:14pt;
 }
 
@@ -18,7 +18,7 @@ div.code {
 }
 
 div.links {
-  margin-top: 1em;
+  margin-top:1em;
 }
 
 div.images {
@@ -68,7 +68,7 @@ div.images.design {
 }
 
 li.nav {
-  font-size: 1.5em;
+  font-size:1.5em;
 }
 
 li.dbc {
@@ -77,7 +77,7 @@ li.dbc {
 }
 
 li {
-  list-style: none;
+  list-style:none;
 }
 
 a:link {
@@ -117,7 +117,7 @@ a.actived {
 
 div.contact {
   position:absolute;
-  font-size: .8em;
+  font-size:.8em;
   bottom:3em;
   left:1.6em;
   background: white;
@@ -128,15 +128,69 @@ div.contact {
   padding:0 0 1em 0;
   position:fixed;
   width:100%;
-  background: white;
+  background:white;
   bottom:0;
 }
 
 .foot-nav > li {
   float:left;
-  margin-right: 2em;
+  margin-right:2em;
 }
 
 .hidden {
   display:none;
 }
+
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 480px)
+and (max-device-width : 568px) {
+
+  div.contact {
+    position:absolute;
+    font-size:2em;
+    bottom:3em;
+    left:1.6em;
+    background: white;
+    padding:1em;
+  }
+
+  a.bottom-link {
+    font-family:monaco, courier;
+    font-size:3em;
+  }
+
+  div.images {
+    position:absolute;
+    top:15em;
+    margin-left:21.7em;
+    width:30em;
+  }
+
+  div.images.design {
+    position:absolute;
+    top:15em;
+    margin-left:16.7em;
+    width:30em;
+  }
+
+  .nav-list {
+    position:absolute;
+    font-size:.8em;
+    top:-1em;
+    left:17.5em;
+    width:20em;
+    line-height:1.3em;
+  }
+
+  .nav-list.design {
+    position:absolute;
+    font-size:.8em;
+    top:-1em;
+    left:23.7em;
+    width:20em;
+    line-height:1.3em;
+  }
+
+}
+
