there must be an easier way

--- a/css/style.css
+++ b/css/style.css
@@ -163,13 +163,13 @@ and (max-device-width : 480px) {
 
   div.images {
     position:absolute;
-    top:8em;
+    margin-top:8em;
     margin-left:0;
   }
 
   div.images.design {
     position:absolute;
-    top:8em;
+    margin-top:8em;
     margin-left:0;
   }
 
@@ -185,7 +185,6 @@ and (max-device-width : 480px) {
     position:relative;
     font-size:1.5em;
     line-height:1.5em;
-    margin-bottom: 5em;
   }
 
   .nav-list.design {
