--- a/css/style.css
+++ b/css/style.css
@@ -163,13 +163,13 @@ and (max-device-width : 480px) {
 
   div.images {
     position:absolute;
-    margin-top:8em;
+    top:20em;
     margin-left:0;
   }
 
   div.images.design {
     position:absolute;
-    margin-top:8em;
+    top:20em;
     margin-left:0;
   }
 
@@ -182,13 +182,15 @@ and (max-device-width : 480px) {
   }
 
   .nav-list {
-    position:relative;
+    position:absolute;
     font-size:1.5em;
     line-height:1.5em;
+    top:20em;
+    left:10em;
   }
 
   .nav-list.design {
-    position:relative;
+    position:absolute;
     font-size:1.5em;
     line-height:1.5em;
   }
