remove media queries

--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ span.contact {
 .hidden {
   display:none;
 }
-
+/*
 @media only screen
 and (min-device-width : 320px)
 and (max-device-width : 480px) {
@@ -233,3 +233,4 @@ and (max-device-width : 480px) {
 
 }
 
+*/
