add index.less file that imports stylesheets

--- a/assets/stylesheets/index.less
+++ b/assets/stylesheets/index.less
@@ -1,9 +1,7 @@
-html, body {
-    width:  100%;
-    height: 100%;
-    margin: 0px;
-}
+/* vendors */
+@import 'vendor/basscss.less';
 
-.adventure {
-    font-size: 1.25em;
-}
+/* General variables */
+@vusay-lightblue: #52BDEC;
+
+@import 'less/base.less';
