add google font and skeleton.css, remove bass.css

--- a/assets/stylesheets/index.less
+++ b/assets/stylesheets/index.less
@@ -1,7 +1,10 @@
+/* fonts */
+@import url(http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic);
+
 /* vendors */
-@import 'vendor/basscss.less';
+@import 'vendor/normalize.less';
+@import 'vendor/skeleton.less';
 
 /* General variables */
-@vusay-lightblue: #52BDEC;
 
 @import 'less/base.less';
