--- a/assets/stylesheets/less/base.less
+++ b/assets/stylesheets/less/base.less
@@ -1,9 +1,96 @@
-html, body {
-    width:  100%;
-    height: 100%;
-    margin: 0px;
+body {
+    font-family: sans-serif;
 }
 
-.adventure {
-    font-size: 1.25em;
+a {
+    /*text-decoration: none;*/
+    color: black;
+}
+
+/*.link {
+    border-bottom: 2px solid black;
+
+    &:hover {
+        border-bottom: 2px solid #0FA0CE;
+    }
+}*/
+
+/* helpers */
+.libre-baskerville {
+    font-family: "Libre Baskerville", serif;
+}
+
+.py25 {
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.py100 {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.py150 {
+    padding-top: 150px;
+    padding-bottom: 150px;
+}
+
+.f-right {
+    float: right;
+}
+
+.f-left {
+    float: left;
+}
+
+.navbar-list {
+    list-style: none;
+    margin-bottom: 0;
+
+    &.f-right {
+        .navbar-item {
+            margin-left: 35px;
+        }
+    }
+
+    &.f-left {
+        .navbar-item {
+            margin-right: 35px;
+        }
+    }
+}
+
+.navbar-item {
+    float: left;
+    margin-bottom: 0;
+}
+/* end helpers */
+
+/* font */
+.big {
+    font-size: 12rem;
+    line-height: 14rem;
+    font-weight: 700;
+}
+
+.medium {
+    font-size: 4.5rem;
+    line-height: 7rem;
+}
+
+.small {
+    font-size: 3rem;
+    line-height: 5rem;
+}
+/* end font */
+
+.likes {
+    background-color: lightgray;
+}
+
+.nav {
+    border-bottom: 1px solid black;
+}
+
+.footer {
 }
