--- a/assets/stylesheets/less/base.less
+++ b/assets/stylesheets/less/base.less
@@ -3,19 +3,14 @@ body {
 }
 
 a {
-    /*text-decoration: none;*/
     color: black;
 }
 
-/*.link {
-    border-bottom: 2px solid black;
-
-    &:hover {
-        border-bottom: 2px solid #0FA0CE;
-    }
-}*/
-
 /* helpers */
+.hide {
+    display: none;
+}
+
 .libre-baskerville {
     font-family: "Libre Baskerville", serif;
 }
@@ -41,6 +36,10 @@ a {
 
 .f-left {
     float: left;
+}
+
+.align-right {
+    text-align: right;
 }
 
 .navbar-list {
