add background color

--- a/assets/stylesheets/less/base.less
+++ b/assets/stylesheets/less/base.less
@@ -84,11 +84,11 @@ a {
 /* end font */
 
 .likes {
-    background-color: lightgray;
+    background-color: #1abc9c;
+    color: white;
 }
 
 .nav {
-    border-bottom: 1px solid black;
 }
 
 .footer {
