--- a/assets/stylesheets/index.less
+++ b/assets/stylesheets/index.less
@@ -2,9 +2,11 @@
 @import url(http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic);
 
 /* vendors */
-@import 'vendor/normalize.less';
-@import 'vendor/skeleton.less';
+@import 'vendor/skeleton/normalize.less';
+@import 'vendor/skeleton/skeleton.less';
+@import 'vendor/font-awesome/font-awesome.min.less';
 
 /* General variables */
+@teal: #1abc9c;
 
 @import 'less/base.less';
