remove .libre-baskerville divs, dry it up in .container css

--- a/assets/stylesheets/less/base.less
+++ b/assets/stylesheets/less/base.less
@@ -118,6 +118,10 @@ a {
 /* end font */
 
 /* sections */
+.container {
+    .libre-baskerville;
+}
+
 .likes {
     background-color: @teal;
     color: white;
