--- a/assets/stylesheets/less/base.less
+++ b/assets/stylesheets/less/base.less
@@ -14,6 +14,7 @@ a {
 }
 
 .circle {
+    font-family: "Helvetica", sans-serif;
     background-color: #333;
     color: white;
     text-align: center;
@@ -25,6 +26,10 @@ a {
         cursor: pointer;
         background-color: @teal;
     }
+}
+
+.navbar-item {
+    line-height: 30px;
 }
 
 /* helpers */
@@ -44,18 +49,6 @@ a {
 .py100 {
     padding-top: 100px;
     padding-bottom: 100px;
-}
-
-.py150 {
-    padding-top: 150px;
-    padding-bottom: 150px;
-}
-
-@media (max-width: 900px) {
-    .sm-py75 {
-        padding-top: 125px;
-        padding-bottom: 75px;
-    }
 }
 
 .f-right {
@@ -111,29 +104,25 @@ a {
     font-size: 3rem;
     line-height: 5rem;
 }
-
-@media (max-width: 900px) {
-    .big {
-        font-size: 4rem;
-        line-height: 1.4;
-        font-weight: 700;
-    }
-
-    .medium {
-        font-size: 2.5rem;
-        line-height: 1.5;
-    }
-
-    .small {
-        font-size: 2rem;
-        line-height: 1.6;
-    }
-}
 /* end font */
 
 /* sections */
 .container {
     .libre-baskerville;
+}
+
+.nav {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    position: fixed;
+    min-width: 100%;
+    background: white;
+    z-index: 1;
+}
+
+.intro {
+    padding-top: 200px;
+    padding-bottom: 150px;
 }
 
 .likes {
