change logo stylings

--- a/assets/stylesheets/less/base.less
+++ b/assets/stylesheets/less/base.less
@@ -15,7 +15,7 @@ a {
 
 .circle {
     font-family: "Helvetica", sans-serif;
-    background-color: #333;
+    background-color: @teal;
     color: white;
     text-align: center;
     border-radius: 30px;
@@ -23,8 +23,7 @@ a {
     min-height: 30px;
     line-height: 30px;
     &:hover {
-        cursor: pointer;
-        background-color: @teal;
+        cursor: default;
     }
 }
 
