make section ids

--- a/assets/stylesheets/less/base.less
+++ b/assets/stylesheets/less/base.less
@@ -106,7 +106,7 @@ a {
     .libre-baskerville;
 }
 
-.nav {
+#nav {
     padding-top: 25px;
     padding-bottom: 25px;
     position: fixed;
@@ -115,12 +115,12 @@ a {
     z-index: 1;
 }
 
-.intro {
+#intro {
     padding-top: 200px;
     padding-bottom: 150px;
 }
 
-.likes {
+#likes {
     background-color: @teal;
     color: white;
 }
