--- a/assets/stylesheets/less/media.less
+++ b/assets/stylesheets/less/media.less
@@ -25,7 +25,7 @@
     /* end font */
 
     /* sections */
-    .intro {
+    #intro {
         padding-top: 125px;
         padding-bottom: 75px;
     }
