--- a/assets/stylesheets/less/media.less
+++ b/assets/stylesheets/less/media.less
@@ -30,4 +30,19 @@
         padding-bottom: 75px;
     }
     /* end sections */
+
+    .circle {
+        &:hover {
+            cursor: pointer;
+            background-color: #333;
+        }
+    }
+
+    .next {
+        display: none;
+    }
+
+    .top {
+        display: none;
+    }
 }
