--- a/assets/stylesheets/less/base.less
+++ b/assets/stylesheets/less/base.less
@@ -36,6 +36,10 @@ a {
     font-family: "Libre Baskerville", serif;
 }
 
+.white {
+    color: white;
+}
+
 .py25 {
     padding-top: 25px;
     padding-bottom: 25px;
@@ -44,6 +48,10 @@ a {
 .py100 {
     padding-top: 100px;
     padding-bottom: 100px;
+}
+
+.pb20 {
+    padding-bottom: 20px;
 }
 
 .f-right {
@@ -57,6 +65,7 @@ a {
 .align-right {
     text-align: right;
 }
+
 /* end helpers */
 
 /* nav */
@@ -72,6 +81,12 @@ a {
 
     &.f-left {
         .navbar-item {
+            margin-left: 10px;
+        }
+    }
+
+    &.f-left {
+        .navbar-item {
             margin-right: 35px;
         }
     }
@@ -80,6 +95,7 @@ a {
 .navbar-item {
     float: left;
     margin-bottom: 0;
+    line-height: 30px;
 }
 /* end nav */
 
@@ -98,6 +114,15 @@ a {
 .small {
     font-size: 3rem;
     line-height: 5rem;
+}
+
+.smaller {
+    font-size: 2rem;
+    line-height: 3rem;
+}
+
+.header {
+    margin-bottom: 40px;
 }
 /* end font */
 
