add custom grid modifications

--- a/assets/stylesheets/less/media.less
+++ b/assets/stylesheets/less/media.less
@@ -1,3 +1,17 @@
+@media (min-width: 550px) {
+    .column, .columns {
+        margin-left: 1%;
+    }
+
+    .six.columns {
+        width: 49.5%;
+    }
+
+    .four.columns {
+        width: 32.6666666667%;
+    }
+}
+
 @media (max-width: 900px) {
     /* helpers */
     .sm-py75 {
