--- a/assets/stylesheets/less/media.less
+++ b/assets/stylesheets/less/media.less
@@ -36,6 +36,11 @@
         font-size: 2rem;
         line-height: 1.6;
     }
+
+    .smaller {
+        font-size: 1.5rem;
+        line-height: 1.6;
+    }
     /* end font */
 
     /* sections */
@@ -57,6 +62,10 @@
     }
 
     .top {
+        display: none;
+    }
+
+    .sm-hide {
         display: none;
     }
 }
