--- a/assets/stylesheets/less/media.less
+++ b/assets/stylesheets/less/media.less
@@ -10,6 +10,10 @@
     .four.columns {
         width: 32.6666666667%;
     }
+
+    .eight.columns {
+        width: 66.333333334%;
+    }
 }
 
 @media (max-width: 900px) {
