--- a/assets/stylesheets/less/base.less
+++ b/assets/stylesheets/less/base.less
@@ -4,9 +4,21 @@ body {
 
 a {
     color: black;
+    text-decoration: none;
+    border-bottom: 2px solid black;
     &:hover {
         color: @teal;
+        border-bottom: 2px solid @teal;
     }
+    &.no-underline {
+      border-bottom: none;
+    }
+}
+
+.navbar-item {
+  a {
+    border-bottom: none;
+  }
 }
 
 .fa {
