fix font imports

--- a/assets/stylesheets/index.less
+++ b/assets/stylesheets/index.less
@@ -1,6 +1,18 @@
 /* fonts */
 @import url(http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic);
 
+@font-face {
+  font-family: "ArnoldRegular";
+  src: url('../fonts/Arnold-Regular.woff2') format('woff2'),
+       url('../fonts/Arnold-Regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: "ArnoldItalic";
+  src: url('../fonts/Arnold-Italic.woff2') format('woff2'),
+       url('../fonts/Arnold-Italic.woff') format('woff');
+}
+
 /* vendors */
 @import 'vendor/skeleton/normalize.less';
 @import 'vendor/skeleton/skeleton.less';
